# mini-nccl

./: .gitignore  LICENSE  README.md  allgather_example.py  example.py  pyproject.toml  setup.py
benchmarks/: allgather.py  allreduce.py  alltoall.py  results.md
examples/: allreduce.py  alltoall.py  barrier.py  broadcast.py  gather.py  reduce.py  reduce_scatter.py  scatter.py
src/: allgather.cu  allgather.h  allreduce.cu  allreduce.h  alltoall.cu  alltoall.h  backend.cpp  backend.h  broadcast.cu  broadcast.h  cuda_utils.h  gather.cu  gather.h  reduce.cu  reduce.h  reduce_scatter.cu  reduce_scatter.h  scatter.cu  scatter.h
