[build-system]
requires = ["setuptools", "torch", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-nccl"
version = "0.0.1"
description = "A from-scratch implementation of basic collective communication operations for a custom PyTorch distributed backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
